--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Product/Edit.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Product/Edit.cshtml
@@ -258,6 +258,8 @@
                         if (response.success) {
                             $('#modal-create-product-property').modal('hide');
 
+                            table.ajax.reload();
+
                             $(document).Toasts('create', {
                                 class: 'bg-success',
                                 title: 'Başarılı',
