--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Product/Edit.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Product/Edit.cshtml
@@ -158,7 +158,7 @@
                             Draw: d.draw,
                             PageIndex: Math.floor(d.start / d.length),
                             PageSize: d.length,
-                            ProductId: '@Model.ProductPropertySearchModel.ProductId',
+                            ProductId: '@Model.ProductId',
                         };
                     }
                 },
