--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Product/Edit.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Product/Edit.cshtml
@@ -21,124 +21,17 @@
 
 <section class="content">
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-12">
-                <div class="card card-danger card-outline">
-                    <div class="card-header with-border clearfix">
-                        <h3 class="card-title">
-                            <i class="fas fa-edit"></i> @ViewBag.Title
-                        </h3>
-                    </div>
-                    <div class="card-body">
-                        @using (Html.BeginForm("Edit", "Product", FormMethod.Post))
-                        {
-                            @Html.AntiForgeryToken()
-                            @Html.HiddenFor(x => x.ProductId)
+        @Html.Partial("_EditProductCard", Model)
 
-                            <div class="form-group">
-                                @Html.LabelFor(x => x.ProductName, "Ürün Adı", htmlAttributes: new { @class = "form-label" })
-                                @Html.TextBoxFor(x => x.ProductName, new { @class = "form-control", placeholder = "Ürün adı" })
-                                @Html.ValidationMessageFor(x => x.ProductName, "", new { @class = "text-danger" })
-                            </div>
-
-                            <div class="form-group">
-                                @Html.LabelFor(x => x.CategoryId, "Kategori", new { @class = "form-label" })
-                                @Html.DropDownListFor(
-                                    x => x.CategoryId,
-                                    new SelectList(Model.AvailableCategories, "Value", "Text", Model.CategoryId),
-                                    "Kategori seçiniz...",
-                                    new { @class = "form-control" }
-                                )
-                                @Html.ValidationMessageFor(x => x.CategoryId, "", new { @class = "text-danger" })
-                            </div>
-
-                            <div class="form-group">
-                                @Html.LabelFor(x => x.Price, "Ürün Fiyatı", htmlAttributes: new { @class = "form-label" })
-                                @Html.TextBoxFor(x => x.Price, new { @class = "form-control", placeholder = "Ürün fiyatı" })
-                                @Html.ValidationMessageFor(x => x.Price, "", new { @class = "text-danger" })
-                            </div>
-
-                            <div class="form-group">
-                                @Html.LabelFor(x => x.ImagePath, "Ürün Resmi", htmlAttributes: new { @class = "form-label" })
-                                @Html.TextBoxFor(x => x.ImagePath, new { @class = "form-control", placeholder = "Ürün resmi" })
-                                @Html.ValidationMessageFor(x => x.ImagePath, "", new { @class = "text-danger" })
-                            </div>
-
-                            <div class="form-group mt-3">
-                                <button type="submit" class="btn btn-primary" name="save">Kaydet</button>
-                                <button type="submit" class="btn btn-primary" name="save-continue">Kaydet ve Devam Et</button>
-                                <a href="@Url.Action("Index", "Product")" class="btn btn-secondary">Vazgeç</a>
-                            </div>
-                        }
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row mt-3">
-            <div class="col-12">
-                <div class="card card-danger card-outline">
-                    <div class="card-header with-border clearfix">
-                        <h3 class="card-title">
-                            <i class="fas fa-edit"></i> Ürün Özellikleri
-                        </h3>
-                        <div class="card-tools">
-                            <button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#modal-create-product-property">
-                                <i class="fas fa-plus"></i> Yeni Özellik
-                            </button>
-                        </div>
-                    </div>
-                    <div class="card-body">
-                        <table id="productproperties-datatable" class="table table-bordered table-striped">
-                            <thead>
-                                <tr>
-                                    <th>#</th>
-                                    <th>Key</th>
-                                    <th>Value</th>
-                                    <th>İşlem</th>
-                                </tr>
-                            </thead>
-                            <tbody></tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
+        @Html.Partial("_EditProductPropertyCard", Model)
     </div>
 </section>
 
-<div class="modal fade" id="modal-create-product-property" tabindex="-1" role="dialog" aria-labelledby="createProductPropertyModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="createProductPropertyModalLabel">Yeni Özellik</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <div class="form-group">
-                    @Html.LabelFor(x => x.CreateProductPropertyModel.Key, "Özellik Adı (Key)", htmlAttributes: new { @class = "form-label" })
-                    @Html.TextBoxFor(x => x.CreateProductPropertyModel.Key, new { @class = "form-control", placeholder = "Key" })
-                    @Html.ValidationMessageFor(x => x.CreateProductPropertyModel.Key, "", new { @class = "text-danger" })
-                </div>
+@Html.Partial("_CreateProductPropertyModal", Model)
 
-                <div class="form-group">
-                    @Html.LabelFor(x => x.CreateProductPropertyModel.Value, "Özellik Değeri (Value)", htmlAttributes: new { @class = "form-label" })
-                    @Html.TextBoxFor(x => x.CreateProductPropertyModel.Value, new { @class = "form-control", placeholder = "Value" })
-                    @Html.ValidationMessageFor(x => x.CreateProductPropertyModel.Value, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">İptal</button>
-                <button type="button" class="btn btn-primary" id="createProductPropertyModalSaveBtn">Kaydet</button>
-            </div>
-        </div>
-    </div>
-</div>
+@Html.Partial("_EditProductPropertyModal")
 
 @section scripts {
-
     <script>
         $(function () {
             var table = $('#productproperties-datatable').DataTable({
@@ -179,8 +72,8 @@
                         width: '15%',
                         className: 'text-center',
                         render: function (data, type, row) {
-                            return `<a href='/Admin/Product/Edit/${row.productPropertyId}' class='btn btn-primary btn-sm'>Düzenle</a>
-                                    <button class="btn btn-danger btn-sm delete-btn" data-id="${row.productPropertyId}">Sil</button>`;
+                            return `<button type="button" class='btn btn-primary btn-sm edit-btn' data-id="${row.productPropertyId}">Düzenle</button>
+                                    <button type="button" class="btn btn-danger btn-sm delete-btn" data-id="${row.productPropertyId}">Sil</button>`;
                         }
                     }
                 ],
@@ -235,6 +128,40 @@
                                     body: 'Silme işlemi başarısız oldu.'
                                 });
                             }
+                        });
+                    }
+                });
+            });
+
+            $('#productproperties-datatable').on('click', '.edit-btn', function () {
+
+                var id = $(this).data('id');
+
+                $.ajax({
+                    url: '/Admin/Product/ProductProperty/' + id,
+                    type: 'GET',
+                    success: function (res) {
+                        if (res.success) {
+
+                            $('#modal-edit-product-property .modal-body').html(res.html);
+                            $('#modal-edit-product-property').modal('show');
+
+                        } else {
+                            var message = res.message || 'İşlem başarısız oldu.';
+
+                            $(document).Toasts('create', {
+                                class: 'bg-danger',
+                                title: 'Hata',
+                                body: message,
+                            });
+                        }
+                    },
+                    error: function () {
+                        $(document).Toasts('create', {
+                            class: 'bg-danger',
+                            title: 'Hata',
+                            subtitle: '',
+                            body: 'İşlem başarısız oldu.'
                         });
                     }
                 });
