--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Product/_EditProperty.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Product/_EditProperty.cshtml
@@ -1,6 +1,6 @@
-﻿@model EditProductPropertyModel
+﻿@model EditPropertyModel
 
-@Html.HiddenFor(x => x.ProductPropertyId)
+@Html.HiddenFor(x => x.PropertyId)
 
 <div class="form-group">
     @Html.LabelFor(x => x.Key, "Özellik Adı (Key)", htmlAttributes: new { @class = "form-label" })
