--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Product/_EditPropertyCard.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Product/_EditPropertyCard.cshtml
@@ -14,7 +14,7 @@
                 </div>
             </div>
             <div class="card-body">
-                <table id="productproperties-datatable" class="table table-bordered table-striped">
+                <table id="properties-datatable" class="table table-bordered table-striped">
                     <thead>
                         <tr>
                             <th>#</th>
