--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Product/_CreatePropertyModal.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Product/_CreatePropertyModal.cshtml
@@ -1,10 +1,10 @@
 ﻿@model EditProductModel
 
-<div class="modal fade" id="modal-create-product-property" tabindex="-1" role="dialog" aria-labelledby="createProductPropertyModalLabel" aria-hidden="true">
+<div class="modal fade" id="modal-create-property" tabindex="-1" role="dialog" aria-labelledby="createPropertyModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="createProductPropertyModalLabel">Yeni Özellik</h5>
+                <h5 class="modal-title" id="createPropertyModalLabel">Yeni Özellik</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -22,7 +22,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">İptal</button>
-                <button type="button" class="btn btn-primary" id="createProductPropertyModalSaveBtn">Kaydet</button>
+                <button type="button" class="btn btn-primary" id="createPropertyModalSaveBtn">Kaydet</button>
             </div>
         </div>
     </div>
