--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Product/_EditPropertyModal.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Product/_EditPropertyModal.cshtml
@@ -1,8 +1,8 @@
-﻿<div class="modal fade" id="modal-edit-product-property" tabindex="-1" role="dialog" aria-labelledby="editProductPropertyModalLabel" aria-hidden="true">
+﻿<div class="modal fade" id="modal-edit-property" tabindex="-1" role="dialog" aria-labelledby="editPropertyModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="createProductPropertyModalLabel">Özellik Düzenle</h5>
+                <h5 class="modal-title" id="editPropertyModalLabel">Özellik Düzenle</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -12,7 +12,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">İptal</button>
-                <button type="button" class="btn btn-primary" id="editProductPropertyModalSaveBtn">Kaydet</button>
+                <button type="button" class="btn btn-primary" id="editPropertyModalSaveBtn">Kaydet</button>
             </div>
         </div>
     </div>
