--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Product/_EditPropertyCard.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Product/_EditPropertyCard.cshtml
@@ -8,7 +8,7 @@
                     <i class="fas fa-edit"></i> Ürün Özellikleri
                 </h3>
                 <div class="card-tools">
-                    <button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#modal-create-product-property">
+                    <button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#modal-create-property">
                         <i class="fas fa-plus"></i> Yeni Özellik
                     </button>
                 </div>
