--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Product/Edit.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Product/Edit.cshtml
@@ -72,7 +72,7 @@
                         width: '15%',
                         className: 'text-center',
                         render: function (data, type, row) {
-                            return `<button type="button" class='btn btn-primary btn-sm edit-btn' data-id="${row.PropertyId}">Düzenle</button>
+                            return `<button type="button" class='btn btn-primary btn-sm edit-btn' data-id="${row.propertyId}">Düzenle</button>
                                     <button type="button" class="btn btn-danger btn-sm delete-btn" data-id="${row.productPropertyId}">Sil</button>`;
                         }
                     }
@@ -202,7 +202,7 @@
                         }
                     },
                     error: function (xhr, status, error) {
-                        console.error(error);
+                        console.log(error);
                     },
                     complete: function () {
                         btn.prop('disabled', false);
