--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Product/_EditProductCard.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Product/_EditProductCard.cshtml
@@ -9,7 +9,7 @@
                 </h3>
             </div>
             <div class="card-body">
-                @using (Html.BeginForm("Edit", "Product", FormMethod.Post))
+                @using (Html.BeginForm("Edit", "Product", FormMethod.Post, new { enctype = "multipart/form-data" }))
                 {
                     @Html.AntiForgeryToken()
                     @Html.HiddenFor(x => x.ProductId)
@@ -38,9 +38,9 @@
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(x => x.ImagePath, "Ürün Resmi", htmlAttributes: new { @class = "form-label" })
-                        @Html.TextBoxFor(x => x.ImagePath, new { @class = "form-control", placeholder = "Ürün resmi" })
-                        @Html.ValidationMessageFor(x => x.ImagePath, "", new { @class = "text-danger" })
+                        @Html.Label("ImageFile", "Ürün Resmi", htmlAttributes: new { @class = "form-label" })
+                        @Html.TextBoxFor(x => x.ImageFile, new { type = "file", @class = "form-control" })
+                        @Html.ValidationMessage("ImageFile", "", new { @class = "text-danger" })
                     </div>
 
                     <div class="form-group mt-3">
